[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/game.gd" type="Script" id=1]
[ext_resource path="res://Testing Deck/Level 1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Testing Deck/Level 2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Testing Deck/Level 3.tscn" type="PackedScene" id=4]
[ext_resource path="res://Testing Deck/Level 4.tscn" type="PackedScene" id=5]
[ext_resource path="res://Testing Deck/Level 5.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/DoorClosed.png" type="Texture" id=7]
[ext_resource path="res://Assets/DoorOpen.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/hud.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/CRT Shader.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.067, 62.549 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.157, 62.549 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26.627, 62.549 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22.197, 62.549 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29.627, 50.509 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24.187, 50.049 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="1" parent="." instance=ExtResource( 2 )]

[node name="2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1152, -80 )

[node name="3" parent="." instance=ExtResource( 4 )]
position = Vector2( 2300, 160 )

[node name="4" parent="." instance=ExtResource( 5 )]
position = Vector2( 3452, 65 )

[node name="5" parent="." instance=ExtResource( 6 )]
position = Vector2( 4603, -79 )

[node name="blocker2" type="Area2D" parent="."]
editor/display_folded = true
modulate = Color( 0.909804, 0.160784, 0.160784, 1 )
position = Vector2( 24.4496, 400.921 )

[node name="Sprite" type="Sprite" parent="blocker2"]
position = Vector2( 0, -0.370941 )
scale = Vector2( 3.43, 3.039 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker2"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="blocker2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker2/StaticBody2D"]
shape = SubResource( 2 )

[node name="blocker3" type="Area2D" parent="."]
editor/display_folded = true
modulate = Color( 0.909804, 0.160784, 0.160784, 1 )
position = Vector2( 2273.45, 355.921 )

[node name="Sprite" type="Sprite" parent="blocker3"]
position = Vector2( 0, -0.370941 )
scale = Vector2( 3.43, 3.039 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker3"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="blocker3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker3/StaticBody2D"]
shape = SubResource( 2 )

[node name="blocker4" type="Area2D" parent="."]
editor/display_folded = true
modulate = Color( 0.909804, 0.160784, 0.160784, 1 )
position = Vector2( 3474.45, 639.921 )

[node name="Sprite" type="Sprite" parent="blocker4"]
position = Vector2( 0, -0.370941 )
scale = Vector2( 3.43, 3.039 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker4"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="blocker4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker4/StaticBody2D"]
shape = SubResource( 2 )

[node name="blocker5" type="Area2D" parent="."]
editor/display_folded = true
modulate = Color( 0.909804, 0.160784, 0.160784, 1 )
position = Vector2( 4628.45, 398.921 )

[node name="Sprite" type="Sprite" parent="blocker5"]
position = Vector2( 0, -0.370941 )
scale = Vector2( 3.43, 3.039 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker5"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="blocker5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker5/StaticBody2D"]
shape = SubResource( 2 )

[node name="blocker" type="Area2D" parent="."]
editor/display_folded = true
modulate = Color( 0.909804, 0.160784, 0.160784, 1 )
position = Vector2( 1174.45, 400.921 )

[node name="Sprite" type="Sprite" parent="blocker"]
position = Vector2( 0, -0.370941 )
scale = Vector2( 3.43, 3.039 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="blocker"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker/StaticBody2D"]
shape = SubResource( 2 )

[node name="door2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 983.13, 399.016 )

[node name="Sprite" type="Sprite" parent="door2"]
position = Vector2( 0, 0.629045 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="door2"]
visible = false
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="door2"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="door2/StaticBody2D"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="door3" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 2137.07, 354.397 )

[node name="Sprite" type="Sprite" parent="door3"]
position = Vector2( 0, 0.629045 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="door3"]
shape = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="door3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door3/StaticBody2D"]
shape = SubResource( 4 )

[node name="door4" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 3329.99, 639.781 )

[node name="Sprite" type="Sprite" parent="door4"]
position = Vector2( 0, 0.629045 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="door4"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="door4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door4/StaticBody2D"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="door5" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 4435.99, 399.781 )

[node name="Sprite" type="Sprite" parent="door5"]
position = Vector2( 0, 0.629045 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="door5"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="door5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door5/StaticBody2D"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="door6" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 5585.99, 257.781 )

[node name="Sprite" type="Sprite" parent="door6"]
position = Vector2( 0, 0.629045 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="door6"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="door6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door6/StaticBody2D"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 87.32, 414.178 )
WALK_SPEED = 125
JUMP_SPEED = 250

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 513.592, 299.982 )
current = true
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="hud" parent="CanvasLayer" instance=ExtResource( 10 )]
position = Vector2( 512.97, 300.351 )

[node name="CRT Shader" parent="." instance=ExtResource( 11 )]
layer = 4
[connection signal="body_entered" from="door2" to="." method="_on_door2_body_entered"]
[connection signal="body_entered" from="door3" to="." method="_on_door3_body_entered"]
[connection signal="body_entered" from="door4" to="." method="_on_door4_body_entered"]
[connection signal="body_entered" from="door5" to="." method="_on_door5_body_entered"]
[connection signal="body_entered" from="door6" to="." method="_on_door6_body_entered"]
